Added UI and wired up to Storage for adding and modifying pens and inks

--- a/InkedUpMobile/InkDetailPage.xaml
+++ b/InkedUpMobile/InkDetailPage.xaml
@@ -3,7 +3,16 @@
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     x:Class="InkedUpMobile.InkDetailPage">
-    <ContentPage.Content>
-        
-    </ContentPage.Content>
+    <StackLayout>
+        <Entry x:Name="manufacturerEntry"
+                   Placeholder="Manufacturers name"/>
+        <Entry x:Name="colourEntry"
+                   Placeholder="Colour of ink"/>
+        <Button Text="Update"
+                x:Name="updateButton"
+                Clicked="updateButton_Clicked"/>
+        <Button Text="Delete"
+                x:Name="DeleteButton"
+                Clicked="deleteButton_Clicked"/>
+    </StackLayout>
 </ContentPage>
