Wired up functionality to ink pen

--- a/InkedUpMobile/InkDetailPage.xaml
+++ b/InkedUpMobile/InkDetailPage.xaml
@@ -4,15 +4,16 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     x:Class="InkedUpMobile.InkDetailPage">
     <StackLayout>
-        <Entry x:Name="manufacturerEntry"
+        <Label x:Name="LabelDisplayName" />
+        <Entry x:Name="ManufacturerEntry"
                    Placeholder="Manufacturers name"/>
-        <Entry x:Name="colourEntry"
+        <Entry x:Name="ColourEntry"
                    Placeholder="Colour of ink"/>
         <Button Text="Update"
-                x:Name="updateButton"
-                Clicked="updateButton_Clicked"/>
+                x:Name="UpdateButton"
+                Clicked="UpdateButton_Clicked"/>
         <Button Text="Delete"
                 x:Name="DeleteButton"
-                Clicked="deleteButton_Clicked"/>
+                Clicked="DeleteButton_Clicked"/>
     </StackLayout>
 </ContentPage>
